# grasp-cube-sample

./: .gitignore  .gitmodules  DUAL_ARM_SETUP.md  README.md  README_zh.md  convert_biso101_to_lerobot.py  convert_maniskill_data_to_lerobot.py  convert_so101_to_lerobot.py  convert_to_lerobot.py  docker_tutorial.md  download_urdf.py  environment.yaml  eval_policy.py  eval_results.json  hello_pick_cube.py  hello_robot.py  log.txt  pyproject.toml  run.sh  test_self_defined.py  test_sort_cube.py  tmp_run.sh  upload_dataset_to_hf.py  visualize_dataset.py
grasp_cube/envs/tasks/: lift_cube_so101.py  self_defined_so101.py  sort_cube_so101.py  stack_cube_so101.py  table.py
grasp_cube/motionplanning/base_motionplanner/: motionplanner.py
grasp_cube/motionplanning/so101/: run.py
grasp_cube/real/: __init__.py  act_policy.py  eval_record_wrapper.py  evaluate.py  fake_lerobot_env.py  lerobot_env.py  monitor_wrapper.py  run_env_client.py  run_fake_env_client.py  serve_act_policy.py
partnet-mobility-dataset/100664/: mobility.urdf
partnet-mobility-dataset/45290/: mobility.urdf
partnet-mobility-dataset/45677/: bounding_box.json  meta.json  mobility.urdf  mobility_v2.json  result.json  result_after_merging.json  tree_hier.html  tree_hier_after_merging.html
rl/tdmpc2/: collect_data.py  collect_demo.sh  config.yaml
rl/tdmpc2/envs/: maniskill.py
scripts/: caliberate_fron_camera.py
tools/: check_dataset_stats.py  convert_biso101_to_lerobot.py  convert_maniskill_data_to_lerobot.py  convert_so101_to_lerobot.py  download_urdf.py  hello_real_robot.py  test_lift_cube.py
(+18 files in other folders)
