[project]
name = "grasp-cube-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mani-skill-nightly",
    "numpy<2.0",
    "websockets>=15.0.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "grasp_cube",
]
